--- a/src/index.html
+++ b/src/index.html
@@ -179,10 +179,7 @@
             data-bs-target="#carouselExampleIndicators"
             data-bs-slide="prev"
           >
-            <span class="carousel-control-prev-icon" aria-hidden="false"
-              >&#11164;</span
-            >
-            <span class="visually-hidden">Previous</span>
+            ⮜
           </button>
           <button
             class="carousel-control-next"
@@ -190,10 +187,7 @@
             data-bs-target="#carouselExampleIndicators"
             data-bs-slide="next"
           >
-            <span class="carousel-control-next-icon" aria-hidden="false">
-              &#11166;</span
-            >
-            <span class="visually-hidden">Next</span>
+            ⮞
           </button>
         </div>
       </section>
@@ -204,24 +198,40 @@
         <h2 class="section-title">Agents</h2>
         <div class="container-margin flex agents-container">
           <div class="agent-card">
-            <img src="/src/images/agents/Peter-parker.jpg" alt="" />
+            <img
+              class="agent-1"
+              src="/src/images/agents/Peter-parker.jpg"
+              alt=""
+            />
             <h3>Peter Parker</h3>
             <p class="lg-accent">Sales Agent</p>
           </div>
           <div class="agent-card">
-            <img src="/src/images/agents/Mary Jane.jpg" alt="" />
+            <img
+              class="agent-2"
+              src="/src/images/agents/Mary Jane.jpg"
+              alt=""
+            />
             <div class="agent-info">
               <h3>Mary Jane</h3>
               <p class="lg-accent">Web developer</p>
             </div>
           </div>
           <div class="agent-card">
-            <img src="/src/images/agents/Monica Lewinsky.jpg" alt="" />
+            <img
+              class="agent-3"
+              src="/src/images/agents/Monica Lewinsky.jpg"
+              alt=""
+            />
             <h3>Monica Lewinsky</h3>
             <p class="lg-accent">Accountant</p>
           </div>
           <div class="agent-card">
-            <img src="/src/images/agents/Tony-stark.jpg" alt="" />
+            <img
+              class="agent-4"
+              src="/src/images/agents/Tony-stark.jpg"
+              alt=""
+            />
             <h3>Tony Stark</h3>
             <p class="lg-accent">Sales Director</p>
           </div>
@@ -338,16 +348,18 @@
 
       <!-- Testimonials section -->
 
-      <section id="testimonials" class="md-bg sides-padding tb-padding">
+      <section
+        id="testimonials"
+        class="md-bg carousel-dark sides-padding tb-padding"
+      >
         <h2 class="section-title">Testimonials</h2>
         <div
           id="carouselExampleIndicators2"
           class="carousel slide"
           data-bs-ride="carousel"
-          data-interval="false"
         >
           <div class="carousel-inner">
-            <div class="carousel-item active">
+            <div class="carousel-item active" data-bs-interval="false">
               <div class="inner-info">
                 <p class="comment">
                   Lorem ipsum dolor sit amet consectetur, adipisicing elit.
@@ -361,7 +373,7 @@
                 <h3 class="accent">Loraine Smith</h3>
               </div>
             </div>
-            <div class="carousel-item">
+            <div class="carousel-item" data-bs-interval="false">
               <div class="inner-info">
                 <p class="comment">
                   Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut,
@@ -375,11 +387,11 @@
                 <h3 class="accent">Judith Grace</h3>
               </div>
             </div>
-            <div class="carousel-item">
+            <div class="carousel-item" data-bs-interval="false">
               <div class="inner-info">
                 <p class="comment">
-                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                  Distinctio, odio!
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Non
+                  in laborum ipsum.
                 </p>
                 <img
                   src="/src/images/testimonials/face-3.jpg"
@@ -389,7 +401,7 @@
                 <h3 class="accent">Richard Mille</h3>
               </div>
             </div>
-            <div class="carousel-item">
+            <div class="carousel-item" data-bs-interval="false">
               <div class="inner-info">
                 <p class="comment">
                   Lorem ipsum dolor sit, amet consectetur adipisicing elit.
@@ -410,10 +422,7 @@
             data-bs-target="#carouselExampleIndicators2"
             data-bs-slide="prev"
           >
-            <span class="carousel-control-prev-icon" aria-hidden="false"
-              >&#11164;</span
-            >
-            <span class="visually-hidden">Previous</span>
+            ⮜
           </button>
           <button
             class="carousel-control-next"
@@ -421,10 +430,7 @@
             data-bs-target="#carouselExampleIndicators2"
             data-bs-slide="next"
           >
-            <span class="carousel-control-next-icon" aria-hidden="false">
-              &#11166;</span
-            >
-            <span class="visually-hidden">Next</span>
+            ⮞
           </button>
         </div>
       </section>
@@ -471,7 +477,7 @@
       </section>
 
       <!-- Footer section -->
-      <footer id="footer" class="flex drk-bg tb-padding">
+      <footer id="footer" class="flex drk-bg">
         <div class="social-media flex">
           <img src="/src/images/footer/instagram.png" alt="" />
           <img src="/src/images/footer/facebook.png" alt="" />
