--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
     <!-- CSS styles -->
-    <link rel="stylesheet" href="/src/scss/main.scss" />
+    <link rel="stylesheet" href="/src/main.css" />
     <!-- JavaScript -->
     <script type="module" src="/src/app.js"></script>
   </head>
