Changing files paths

--- a/src/index.html
+++ b/src/index.html
@@ -151,7 +151,7 @@
             <div class="carousel-item active" data-bs-interval="false">
               <div class="carousel-card">
                 <img
-                  src="./images/properties/image-1.jpg"
+                  src="../src/images/properties/image-1.jpg"
                   class="d-block w-100"
                   alt="House 1"
                 />
@@ -163,7 +163,7 @@
             <div class="carousel-item" data-bs-interval="false">
               <div class="carousel-card">
                 <img
-                  src="./images/properties/image-2.jpg"
+                  src="../src/images/properties/image-2.jpg"
                   class="d-block w-100"
                   alt="House 2"
                 />
@@ -175,7 +175,7 @@
             <div class="carousel-item" data-bs-interval="false">
               <div class="carousel-card">
                 <img
-                  src="./images/properties/image-3.jpg"
+                  src="../src/images/properties/image-3.jpg"
                   class="d-block w-100"
                   alt="House 3"
                 />
@@ -187,7 +187,7 @@
             <div class="carousel-item" data-bs-interval="false">
               <div class="carousel-card">
                 <img
-                  src="./images/properties/image-4.jpg"
+                  src="../src/images/properties/image-4.jpg"
                   class="d-block w-100"
                   alt="House 4"
                 />
@@ -224,14 +224,18 @@
           <div class="agent-card">
             <img
               class="agent-1"
-              src="./images/agents/peter-parker.jpg"
+              src="../src/images/agents/peter-parker.jpg"
               alt=""
             />
             <h3>Peter Parker</h3>
             <p class="lg-accent">Sales Agent</p>
           </div>
           <div class="agent-card">
-            <img class="agent-2" src="./images/agents/mary-jane.jpg" alt="" />
+            <img
+              class="agent-2"
+              src="../src/images/agents/mary-jane.jpg"
+              alt=""
+            />
             <div class="agent-info">
               <h3>Mary Jane</h3>
               <p class="lg-accent">Web developer</p>
@@ -240,14 +244,18 @@
           <div class="agent-card">
             <img
               class="agent-3"
-              src="./images/agents/monica-lewinsky.jpg"
+              src="../src/images/agents/monica-lewinsky.jpg"
               alt=""
             />
             <h3>Monica Lewinsky</h3>
             <p class="lg-accent">Accountant</p>
           </div>
           <div class="agent-card">
-            <img class="agent-4" src="./images/agents/tony-stark.jpg" alt="" />
+            <img
+              class="agent-4"
+              src="../src/images/agents/tony-stark.jpg"
+              alt=""
+            />
             <h3>Tony Stark</h3>
             <p class="lg-accent">Sales Director</p>
           </div>
@@ -382,7 +390,7 @@
                   Possimus laudantium eaque quos?
                 </p>
                 <img
-                  src="./images/testimonials/face-1.jpg"
+                  src="../src/images/testimonials/face-1.jpg"
                   class="d-block image-1"
                   alt="House 1"
                 />
@@ -396,7 +404,7 @@
                   consequatur! Doloribus, quidem nostrum.
                 </p>
                 <img
-                  src="./images/testimonials/face-2.jpg"
+                  src="../src/images/testimonials/face-2.jpg"
                   class="d-block image-2"
                   alt="House 2"
                 />
@@ -410,7 +418,7 @@
                   in laborum ipsum.
                 </p>
                 <img
-                  src="./images/testimonials/face-3.jpg"
+                  src="../src/images/testimonials/face-3.jpg"
                   class="d-block image-3"
                   alt="House 3"
                 />
@@ -424,7 +432,7 @@
                   Doloremque, rem!
                 </p>
                 <img
-                  src="./images/testimonials/face-4.jpg"
+                  src="../src/images/testimonials/face-4.jpg"
                   class="d-block image-4"
                   alt="House 4"
                 />
