--- a/src/index.html
+++ b/src/index.html
@@ -146,7 +146,7 @@
             <div class="carousel-item active" data-bs-interval="false">
               <div class="carousel-card">
                 <img
-                  src="./images/properties/image-1.jpg"
+                  src="./src/images/properties/image-1.jpg"
                   class="d-block w-100"
                   alt="House 1"
                 />
@@ -158,7 +158,7 @@
             <div class="carousel-item" data-bs-interval="false">
               <div class="carousel-card">
                 <img
-                  src="./images/properties/image-2.jpg"
+                  src="./src/images/properties/image-2.jpg"
                   class="d-block w-100"
                   alt="House 2"
                 />
@@ -170,7 +170,7 @@
             <div class="carousel-item" data-bs-interval="false">
               <div class="carousel-card">
                 <img
-                  src="./images/properties/image-3.jpg"
+                  src="./src/images/properties/image-3.jpg"
                   class="d-block w-100"
                   alt="House 3"
                 />
@@ -182,7 +182,7 @@
             <div class="carousel-item" data-bs-interval="false">
               <div class="carousel-card">
                 <img
-                  src="./images/properties/image-4.jpg"
+                  src="./src/images/properties/image-4.jpg"
                   class="d-block w-100"
                   alt="House 4"
                 />
@@ -219,14 +219,18 @@
           <div class="agent-card">
             <img
               class="agent-1"
-              src="./images/agents/peter-parker.jpg"
+              src="./src/images/agents/peter-parker.jpg"
               alt=""
             />
             <h3>Peter Parker</h3>
             <p class="lg-accent">Sales Agent</p>
           </div>
           <div class="agent-card">
-            <img class="agent-2" src="./images/agents/mary-jane.jpg" alt="" />
+            <img
+              class="agent-2"
+              src="./src/images/agents/mary-jane.jpg"
+              alt=""
+            />
             <div class="agent-info">
               <h3>Mary Jane</h3>
               <p class="lg-accent">Web developer</p>
@@ -235,14 +239,18 @@
           <div class="agent-card">
             <img
               class="agent-3"
-              src="./images/agents/monica-lewinsky.jpg"
+              src="./src/images/agents/monica-lewinsky.jpg"
               alt=""
             />
             <h3>Monica Lewinsky</h3>
             <p class="lg-accent">Accountant</p>
           </div>
           <div class="agent-card">
-            <img class="agent-4" src="./images/agents/tony-stark.jpg" alt="" />
+            <img
+              class="agent-4"
+              src="./src/images/agents/tony-stark.jpg"
+              alt=""
+            />
             <h3>Tony Stark</h3>
             <p class="lg-accent">Sales Director</p>
           </div>
@@ -377,7 +385,7 @@
                   Possimus laudantium eaque quos?
                 </p>
                 <img
-                  src="./images/testimonials/face-1.jpg"
+                  src="./src/images/testimonials/face-1.jpg"
                   class="d-block image-1"
                   alt="House 1"
                 />
@@ -391,7 +399,7 @@
                   consequatur! Doloribus, quidem nostrum.
                 </p>
                 <img
-                  src="./images/testimonials/face-2.jpg"
+                  src="./src/images/testimonials/face-2.jpg"
                   class="d-block image-2"
                   alt="House 2"
                 />
@@ -405,7 +413,7 @@
                   in laborum ipsum.
                 </p>
                 <img
-                  src="./images/testimonials/face-3.jpg"
+                  src="./src/images/testimonials/face-3.jpg"
                   class="d-block image-3"
                   alt="House 3"
                 />
@@ -419,7 +427,7 @@
                   Doloremque, rem!
                 </p>
                 <img
-                  src="./images/testimonials/face-4.jpg"
+                  src="./src/images/testimonials/face-4.jpg"
                   class="d-block image-4"
                   alt="House 4"
                 />
