Carousel buttons style changed

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DreamedHouse</title>
+
+    <!-- Tab icon  -->
+    <link rel="icon" href="../src/images/money.svg" />
+
     <!-- Font awesome CDN -->
     <link
       rel="stylesheet"
@@ -192,22 +196,23 @@
               </div>
             </div>
           </div>
-          <button
+
+          <div
             class="carousel-control-prev"
             type="button"
             data-bs-target="#carouselExampleIndicators"
             data-bs-slide="prev"
           >
-            ⇍
-          </button>
-          <button
+            <button class="carousel-btn">⇍</button>
+          </div>
+          <div
             class="carousel-control-next"
             type="button"
             data-bs-target="#carouselExampleIndicators"
             data-bs-slide="next"
           >
-            ⇏
-          </button>
+            <button class="carousel-btn">⇏</button>
+          </div>
         </div>
       </section>
 
@@ -427,22 +432,22 @@
               </div>
             </div>
           </div>
-          <button
+          <div
             class="carousel-control-prev"
             type="button"
             data-bs-target="#carouselExampleIndicators2"
             data-bs-slide="prev"
           >
-            ⇍
-          </button>
-          <button
+            <div class="carousel-btn">⇍</div>
+          </div>
+          <div
             class="carousel-control-next"
             type="button"
             data-bs-target="#carouselExampleIndicators2"
             data-bs-slide="next"
           >
-            ⇏
-          </button>
+            <button class="carousel-btn">⇏</button>
+          </div>
         </div>
       </section>
 
